# aureum-real-blockchain

./: .dockerignore  COMPILATION_SUCCESS.md  DEPLOY_FIXES_NOW.md  Dockerfile  Dockerfile.explorer  Dockerfile.node  Dockerfile.wallet  FRONTEND_SYNC_FIX.md  FUND_WALLET_INSTRUCTIONS.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  README.md  SESSION_STATUS.md  STATUS_REPORT.md  SYNCHRONIZATION_FIX.md  SYSTEM_AUDIT_RESOLUTION.md  WALLET_INTEGRATION_FIXES.md  docker-compose.yml  ecosystem.config.js  fund-wallet.js  package-lock.json  package.json  setup.ps1  setup.sh  test-wallet-funding.js
Documentation/: AUDIT_COMPLETE.md  CODEBASE_AUDIT.md  IMPLEMENTATION_REALITY.md  INTEGRATION_ESCROW_REPORT.md  INTEGRATION_STATUS.md
aureum-explorer/: package-lock.json  package.json
aureum-node/: .gitignore  Cargo.toml
aureum-node/data_test/blockchain/: db  snap.0000000000000238
aureum-node/src/: compliance.rs  consensus.rs  core.rs  lib.rs  main.rs  network.rs  oracle.rs  storage.rs  vm.rs
aureum-node/test_data/institutional_e2e_db/: db
aureum-node/test_data/system_test_db/: db
aureum-node/tests/: institutional_e2e.rs  system_test.rs
aureum-wallet/: CHROME_EXTENSION_GUIDE.md  package-lock.json  package.json
contracts/: RealEstateToken.sol
deploy/: README_DO.md  build.sh  ecosystem.config.js  install.sh  run.sh
docs/: api_specs.md  deployment_guide.md  environment_setup.md  implementation_plan.md  integration_guide.md
scripts/: blockchain_node.js  debug_escrow.js  package-lock.json  package.json  reset-db.sh  seed-data.js  test_escrow_flow.js  test_full_suite.js
(+10 files in other folders)
