[package]
name = "aureum-node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-http-server = "18.0"
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
sled = "0.34"
sha3 = "0.10"
ed25519-dalek = "2.1"
libp2p = { version = "0.53", features = ["tcp", "dns", "noise", "yamux", "gossipsub", "kad", "mdns", "macros", "tokio"] }
futures = "0.3"
revm = { version = "3.3", features = ["serde"] }
primitive-types = "0.12"
parity-scale-codec = { version = "3.6", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
hex = "0.4"
